wireplumber (0.4.9-1) UNRELEASED; urgency=medium

  * Team upload.
  * New upstream version 0.4.9
  * Drop patches included in upstream release:
    - fix_va_list_APIs_for_different_arches.patch
    - si-audio-adapter-relax-format-parsing.patch
  * Bump minimum pipewire to 0.3.48
  * Update symbols file

 -- Dylan Aïssi <daissi@debian.org>  Wed, 23 Mar 2022 09:21:36 +0100

wireplumber (0.4.8-4) unstable; urgency=medium

  * Team upload
  * d/p/si-audio-adapter-relax-format-parsing.patch:
    Add patch from upstream to fix interop with Pipewire 0.3.48
    (Closes: #1007100)

 -- Simon McVittie <smcv@debian.org>  Fri, 11 Mar 2022 10:26:20 +0000

wireplumber (0.4.8-3) unstable; urgency=medium

  * Team upload.
  * Add stricter dependency between wireplumber and libwireplumber-0.4-0
  * Mark gir1.2-wp-0.4 as Multi-Arch: same

 -- Dylan Aïssi <daissi@debian.org>  Wed, 16 Feb 2022 16:33:32 +0100

wireplumber (0.4.8-2) unstable; urgency=medium

  * Team upload.
  * Add an upstream patch to fix va_list APIs for different architectures

 -- Dylan Aïssi <daissi@debian.org>  Wed, 09 Feb 2022 18:09:12 +0100

wireplumber (0.4.8-1) unstable; urgency=medium

  * Team upload.
  * New upstream version 0.4.8
  * Install the upstream changelog file NEWS.rst (Closes: #1003836)
  * Update symbols file
  * Bump minimum pipewire to 0.3.45

 -- Dylan Aïssi <daissi@debian.org>  Mon, 07 Feb 2022 23:21:05 +0100

wireplumber (0.4.7-1) unstable; urgency=medium

  * Team upload.
  * New upstream version 0.4.7

 -- Dylan Aïssi <daissi@debian.org>  Thu, 13 Jan 2022 11:06:07 +0100

wireplumber (0.4.6-1) unstable; urgency=medium

  * Team upload.
  * New upstream version 0.4.6
  * Simplify debian/watch file
  * Bump minimum pipewire to 0.3.43
  * Update symbols file

 -- Dylan Aïssi <daissi@debian.org>  Mon, 10 Jan 2022 17:08:47 +0100

wireplumber (0.4.5-1) unstable; urgency=medium

  * Team upload.
  * New upstream version 0.4.5
  * Update symbols file
