@@ -7,6 +7,7 @@ wireplumber (0.4.9-1) UNRELEASED; urgency=medium
     - si-audio-adapter-relax-format-parsing.patch
   * Bump minimum pipewire to 0.3.48
   * Update symbols file
+  * Simplify debian/salsa-ci.yml
 
  -- Dylan Aïssi <daissi@debian.org>  Wed, 23 Mar 2022 09:21:36 +0100
 
